fixed all issues and added samanira section in homepage

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</div><!-- Home end -->
 
 			<div id="About">
-				<div id="about-me" class="has-shape shape-5 has-slime center-aligned">
+				<div id="about-me" class="has-shape shape-4 white-color center-aligned">
 					<div class="frame">
 						<div class="reveal">
 							<div class="section-title">
@@ -122,7 +122,7 @@
 								<h1>About Me</h1>
 							</div><!-- section-title end -->
 							<div class="section-content">
-								<p class="justified"><span itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m from Tehran, <strong itemprop="nationality">Iran</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained <strong itemprop="award">more than 8500 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer.</span> Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end.I am the owner of <a itemprop="owns" target="_blank" href="http://github.com/samanrashidii/samanira">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
+								<p class="justified"><span itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m from Tehran, <strong itemprop="nationality">Iran</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained <strong itemprop="award">more than 8500 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer.</span> Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end.I am the owner of <a itemprop="owns" href="samanira/index.html">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
 							</div><!-- section-content end -->
 							<div class="pagination">
 								<div class="pagination-content">
@@ -168,7 +168,21 @@
 					</div><!-- frame end -->
 				</div><!-- about-me end -->
 
-				<div id="statistics" class="has-shape shape-4 white-color has-slime-2 center-aligned">
+				<div id="samanira" class="has-shape shape-2 has-slime-2">
+					<div class="frame clearFixAfter">
+						<div class="half-box reveal right-aligned has-large-right-padding">
+							<img class="samanira-main-logo" src="images/samanira.png" alt="Samanira Logo" />
+							<br />
+							<a class="bttn bounce site-2" href="samanira/index.html">Read More</a>
+						</div><!-- half-box end -->
+						<div class="half-box reveal left-aligned">
+							<h4>Owner of <strong class="site-color">SamanirA</strong> Framework</h4>
+							<p>an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.</p>
+						</div><!-- half-box end -->
+					</div><!-- frame end -->
+				</div><!-- samanira end -->
+
+				<div id="statistics" class="has-shape shape-4 white-color center-aligned">
 					<div class="frame">
 						<div class="reveal">
 							<div class="section-title">
