fixed some issues

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Farnaz Yavarianfar</h4>
-											<p>Farnaz Yavarianfar is a professional painter and graduated in Philosophy and Literature from Italy in 2007. She has been learning painting under guidance of Master Taha Behbahani in school of Surrealism Metaphysic since 2009.</p>
+											<p>Farnaz Yavarianfar is a professional painter and graduated in Philosophy and Literature from Italy in 2007</p>
 											<a class="bttn has-icon read-more" href="farnaz-yavarianfar.html">Read More About This Project</a>
 										</div><!-- portfolio-layer-content end -->
 									</div><!-- portfolio-inner-layer end -->
