change in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -824,6 +824,7 @@
 <pre>
 <code>
 <span class="selector">.nav-toggle</span><span class="code-item">{</span>
+    display: none;
     width: 30px;
     height: 21px;
     text-align: center;
