added some items to samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -2749,6 +2749,15 @@
     <span class="selector">.section-box.medium-padding</span><span class="code-item">{</span>padding:7px;<span class="code-item">}</span>
     <span class="selector">.section-box.small-padding</span><span class="code-item">{</span>padding:4px;<span class="code-item">}</span>
 
+    <span class="selector">.half-box</span><span class="code-item">,</span>
+    <span class="selector">.right-side</span><span class="code-item">,</span>
+    <span class="selector">.left-side</span><span class="code-item">{</span>
+        float: none !important;
+        width: 100% !important;
+    <span class="code-item">}</span>
+
+    <span class="selector">.half-half-box</span><span class="code-item">{</span>width: 50%;<span class="code-item">}</span>
+
     <span class="selector">.cl-1</span><span class="code-item">,</span>
     <span class="selector">.cl-2</span><span class="code-item">,</span>
     <span class="selector">.cl-3</span><span class="code-item">,</span>
@@ -3114,6 +3123,11 @@
 
     <span class="selector">select</span><span class="code-item">,</span>
     <span class="selector">input[type="search"]</span><span class="code-item">{</span>background-position-x:97%;<span class="code-item">}</span>
+
+    <span class="selector">.half-half-box</span><span class="code-item">{</span>
+        float: none !important;
+        width: 100% !important;
+    <span class="code-item">}</span>
 
     <span class="selector">.rspv.has-6-6-column > .section</span><span class="code-item">,</span>
     <span class="selector">.rspv.has-4-4-4-column > .section</span><span class="code-item">{</span>
