added an item to samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -1909,6 +1909,13 @@
 
 <span class="selector">.static-content p strong</span><span class="code-item">{</span>font-family: 'Roboto-Medium' !important;<span class="code-item">}</span>
 
+<span class="selector">.static-content blockquote</span><span class="code-item">{</span>
+    font-family: 'Roboto-Medium' !important;
+    font-size: 18px !important;
+    color: #000000 !important;
+    margin-top: 15px !important;
+<span class="code-item">}</span>
+
 <span class="selector">.static-content ul</span><span class="code-item">,</span>
 <span class="selector">.static-content ol</span><span class="code-item">{</span>margin:5px 0 0 10px;<span class="code-item">}</span>
 
@@ -2886,6 +2893,11 @@
     <span class="selector">.static-content p</span><span class="code-item">{</span>
         font-size: 14px !important;
         padding-top:10px !important;
+    <span class="code-item">}</span>
+
+    <span class="selector">.static-content blockquote</span><span class="code-item">{</span>
+        font-size: 15px !important;
+        margin-top: 10px !important;
     <span class="code-item">}</span>
 
     <span class="selector">.double-quotes::before</span><span class="code-item">,</span>
