add an item in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -981,7 +981,7 @@
 <span class="selector">.black-bg</span><span class="code-item">{</span>background-color:#000000;<span class="code-item">}</span>
 <span class="selector">.white-bg</span><span class="code-item">{</span>background-color:#ffffff;<span class="code-item">}</span>
 
-<span class="selector">.auto-width</span><span class="code-item">{</span>width: auto;<span class="code-item">}</span>
+<span class="selector">.auto-width</span><span class="code-item">{</span>width: auto !important;<span class="code-item">}</span>
 <span class="selector">.full-width</span><span class="code-item">{</span>width: 100% !important;<span class="code-item">}</span>
 <span class="selector">.full-height</span><span class="code-item">{</span>height: 100% !important;<span class="code-item">}</span>
 
