some items added to samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -54,12 +54,16 @@
                     </h1>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content samanira has-shape shape-4 has-clear-fix">
-                    <div class="frame clearFixAfter">
+                    <div class="frame has-clear-fix">
                         <div class="main-port-content">
                             <div id="about-samanira">
                                 <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
                                 <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy <span itemprop="programmingLanguage">HTML</span> / <span itemprop="programmingLanguage">CSS</span> / <span itemprop="programmingLanguage">JS</span> framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.<br />
                                 Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a>.</p>
+                                <div class="samanira-socials">
+                                    <a href="https://www.instagram.com/web_samanira/" target="_blank"><img src="../images/samanira/instagram.svg" alt="Samanira Instagram"></a>
+                                    <a href="https://github.com/samanrashidii/SamanirA" target="_blank"><img src="../images/samanira/github.svg" alt="Samanira Github"></a>
+                                </div><!-- samanira-socials end -->
                                 <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
                                 <p>We have done more than 50 front-end projects in 4 years and we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
                                 <ul class="samanira-ul">
@@ -757,6 +761,7 @@
 
 <span class="selector">.bttn.has-icon</span><span class="code-item">{</span>
     text-align: left;
+    background-repeat: no-repeat !important;
     background-position: 13px center;
     padding: 10px 15px 10px 43px;
 <span class="code-item">}</span>
@@ -3206,14 +3211,11 @@
                                 </div><!-- class-box end -->
                             </div><!-- defined-classes end --> 
                         </div><!-- main-port-content end -->
-                        <div class="side-port-content">
-                            <div class="button-box">
-                                <a class="bttn" href="#about-samanira">About SamanirA</a>
-                                <a class="bttn" href="#setup-samanira">Setup SamanirA</a>
-                                <a class="bttn" href="#arrangement-rules">Arrangement Rules</a>
-                                <a class="bttn" href="#defined-classes">Defined Classes</a>
-                            </div><!-- button-box end -->
-                        </div><!-- side-port-content end -->
+                        <div class="clear-fix"></div>
+                        <div class="button-holder in-samanira-buttons center-aligned">
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://github.com/samanrashidii/samanira" target="_blank">Download Now</a>
+                            <a class="bttn has-icon home-icon" href="../index.html">Samanrashidi.com</a>
+                        </div><!-- button-holder end -->
                     </div><!-- frame end -->
                 </div><!-- portfolio-content end -->
             </div><!-- specific-portfolio end -->          
