add an item to samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -2925,6 +2925,11 @@
 
     <span class="selector">input[type="submit"]</span><span class="code-item">{</span>font-size: 14px !important;<span class="code-item">}</span>
 
+    <span class="selector">::-webkit-input-placeholder</span><span class="code-item">{</span>font-size:14px;<span class="code-item">}</span>
+    <span class="selector">:-moz-placeholder</span><span class="code-item">{</span>font-size:14px;<span class="code-item">}</span>
+    <span class="selector">::-moz-placeholder</span><span class="code-item">{</span>font-size:14px;<span class="code-item">}</span>
+    <span class="selector">:-ms-input-placeholder</span><span class="code-item">{</span>font-size:14px;<span class="code-item">}</span>
+
     <span class="selector">.has-vlarge-padding</span><span class="code-item">{</span>padding:40px !important;<span class="code-item">}</span>
     <span class="selector">.has-vlarge-top-padding</span><span class="code-item">{</span>padding-top:40px !important;<span class="code-item">}</span>
     <span class="selector">.has-vlarge-bottom-padding</span><span class="code-item">{</span>padding-bottom:40px !important;<span class="code-item">}</span>
