changed something in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -3087,11 +3087,11 @@
     <span class="selector">.circle-bullet li::before</span><span class="code-item">{</span>
         width: 7px;
         height: 7px;
-        margin-left: 8px;
+        margin-right: 8px;
     <span class="code-item">}</span>
 
     <span class="selector">.number-bullet li::before</span><span class="code-item">,</span>
-    <span class="selector">.tick-bullet li::before</span><span class="code-item">{</span>margin-left: 8px;<span class="code-item">}</span>
+    <span class="selector">.tick-bullet li::before</span><span class="code-item">{</span>margin-right: 8px;<span class="code-item">}</span>
 
     <span class="selector">.tick-bullet li</span><span class="code-item">{</span>font-size: 14px;<span class="code-item">}</span>
 
