add an item in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -1911,6 +1911,7 @@
 <span class="code-item">}</span>
 
 <span class="selector">.static-content p strong</span><span class="code-item">{</span>font-family: 'Roboto-Medium' !important;<span class="code-item">}</span>
+<span class="selector">.static-content p a</span><span class="code-item">{</span>color:#0a9abd !important;<span class="code-item">}</span>
 
 <span class="selector">.static-content blockquote</span><span class="code-item">{</span>
     font-family: 'Roboto-Medium' !important;
