--- a/samanira/index.html
+++ b/samanira/index.html
@@ -2537,12 +2537,19 @@
 
 <span class="selector">.has-3-3-3-3-column > .section:nth-child(4n+1)</span><span class="code-item">{</span>margin-left: 0;<span class="code-item">}</span>
 
+<span class="selector">.has-5x2o4-column > .section</span><span class="code-item">{</span>
+    width: 18%;
+    margin-left: 2.5%;
+<span class="code-item">}</span>
+
+<span class="selector">.has-5x2o4-column > .section:nth-child(5n+1)</span><span class="code-item">{</span>margin-left: 0;<span class="code-item">}</span>
+
 <span class="selector">.has-2-2-2-2-2-2-column > .section</span><span class="code-item">{</span>
     width: 15%;
     margin-left: 2%;
 <span class="code-item">}</span>
 
-<span class="selector">.has-2-2-2-2-2-2-column > .section:nth-child(6an+1)</span><span class="code-item">{</span>margin-left: 0;<span class="code-item">}</span>
+<span class="selector">.has-2-2-2-2-2-2-column > .section:nth-child(6n+1)</span><span class="code-item">{</span>margin-left: 0;<span class="code-item">}</span>
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->
@@ -2631,6 +2638,23 @@
                                             </div><!-- section end -->
                                             <div class="section purple-bg has-xxsmall-padding">
                                                 <strong>div 3</strong>
+                                            </div><!-- section end -->
+                                        </div><!-- section-wrapper end -->
+                                        <div class="section-wrapper has-5x2o4-column center-aligned white-color has-small-top-margin">
+                                            <div class="section site-bg has-xxsmall-padding">
+                                                <strong>div 2.4</strong>
+                                            </div><!-- section end -->
+                                            <div class="section site-2-bg has-xxsmall-padding">
+                                                <strong>div 2.4</strong>
+                                            </div><!-- section end -->
+                                            <div class="section green-bg has-xxsmall-padding">
+                                                <strong>div 2.4</strong>
+                                            </div><!-- section end -->
+                                            <div class="section purple-bg has-xxsmall-padding">
+                                                <strong>div 2.4</strong>
+                                            </div><!-- section end -->
+                                            <div class="section orange-bg has-xxsmall-padding">
+                                                <strong>div 2.4</strong>
                                             </div><!-- section end -->
                                         </div><!-- section-wrapper end -->
                                         <div class="section-wrapper has-2-2-2-2-2-2-column center-aligned white-color has-small-top-margin">
@@ -2803,15 +2827,18 @@
     <span class="code-item">}</span>
 
     <span class="selector">.has-3-3-3-3-column > .section</span><span class="code-item">,</span>
+    <span class="selector">.has-5x2o4-column > .section</span><span class="code-item">,</span>
     <span class="selector">.has-2-2-2-2-2-2-column > .section</span><span class="code-item">{</span>
         width: 48.75%;
         margin-left: 2.5%;
     <span class="code-item">}</span>
 
     <span class="selector">.has-3-3-3-3-column > .section:nth-child(4n+1)</span><span class="code-item">{</span>margin-left: 2.5%;<span class="code-item">}</span>
+    <span class="selector">.has-5x2o4-column > .section:nth-child(5n+1)</span><span class="code-item">{</span>margin-left: 2.5%;<span class="code-item">}</span>
     <span class="selector">.has-2-2-2-2-2-2-column > .section:nth-child(6n+1)</span><span class="code-item">{</span>margin-left: 2.5%;<span class="code-item">}</span>
 
     <span class="selector">.has-3-3-3-3-column > .section:nth-child(2n+1)</span><span class="code-item">,</span>
+    <span class="selector">.has-5x2o4-column > .section:nth-child(2n+1)</span><span class="code-item">,</span>
     <span class="selector">.has-2-2-2-2-2-2-column > .section:nth-child(2n+1)</span><span class="code-item">{</span>margin-left: 0;<span class="code-item">}</span>
 
     <span class="selector">.rspv.has-6-6-column > .section</span><span class="code-item">,</span>
@@ -3116,6 +3143,7 @@
 <span class="code-item-2">@media only screen and (max-width:640px){</span>
 
     <span class="selector">.has-3-3-3-3-column > .section</span><span class="code-item">,</span>
+    <span class="selector">.has-5x2o4-column > .section</span><span class="code-item">,</span>
     <span class="selector">.has-2-2-2-2-2-2-column > .section</span><span class="code-item">{</span>
         float: none !important;
         width: 100% !important;
