added a line in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -973,6 +973,7 @@
                                     <div class="css-code-box">
 <pre>
 <code>
+<span class="selector">.no-bg</span><span class="code-item">{</span>background-color: transparent !important;<span class="code-item">}</span>
 <span class="selector">.site-bg</span><span class="code-item">{</span>background-color: #0a9abd;<span class="code-item">}</span>
 <span class="selector">.site-2-bg</span><span class="code-item">{</span>background-color: #f55757;<span class="code-item">}</span>
 <span class="selector">.blue-bg</span><span class="code-item">{</span>background-color:#368098;<span class="code-item">}</span>
