added something to samainira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -986,6 +986,9 @@
 <span class="selector">.black-bg</span><span class="code-item">{</span>background-color:#000000;<span class="code-item">}</span>
 <span class="selector">.white-bg</span><span class="code-item">{</span>background-color:#ffffff;<span class="code-item">}</span>
 
+<span class="selector">.fixed-attachment</span><span class="code-item">{</span>background-attachment: fixed !important;<span class="code-item">}</span>
+<span class="selector">.scroll-attachment</span><span class="code-item">{</span>background-attachment: scroll !important;<span class="code-item">}</span>
+
 <span class="selector">.auto-width</span><span class="code-item">{</span>width: auto !important;<span class="code-item">}</span>
 <span class="selector">.full-width</span><span class="code-item">{</span>width: 100% !important;<span class="code-item">}</span>
 <span class="selector">.full-height</span><span class="code-item">{</span>height: 100% !important;<span class="code-item">}</span>
@@ -2765,6 +2768,8 @@
         font-size: 16px;
         padding:10px;
     <span class="code-item">}</span>
+
+    <span class="selector">.fixed-attachment</span><span class="code-item">{</span>background-attachment: scroll !important;<span class="code-item">}</span>
 
     <span class="selector">.font-size-vlarge</span><span class="code-item">{</span>font-size: 25px;<span class="code-item">}</span>
     <span class="selector">.font-size-xxlarge</span><span class="code-item">{</span>font-size: 23px;<span class="code-item">}</span>
