added sitemap and samandehi to the website

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<meta property="og:site_name" content="Saman Rashidi" />
 		<meta property="og:image" content="http://www.samanrashidi.com/samanrashidi.png" />
 		<meta name="author" content="Saman Rashidi" />
+		<meta name="samandehi" content="641824005"/>
 		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
 		<link rel="icon" type="image/png" href="favicon.png" />  
 
