fixed some issues

--- a/gaboja.html
+++ b/gaboja.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>:: Saman Rashidi ~ Portfolio ~ Benita v1.0 &amp; v2.0 ::</title>
+        <title>:: Saman Rashidi ~ Portfolio ~ Gaboja ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Gaboja website is one of my projects"/>
         <meta charset="UTF-8" />
