--- a/samanira/index.html
+++ b/samanira/index.html
@@ -3392,5 +3392,14 @@ $('.current-year').html(thisYear);
   ga('send', 'pageview');
 
 </script>
+<script type="application/ld+json">
+    {
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "http://www.samanrashidi.com/samanira",
+      "logo": "http://www.samanrashidi.com/images/samanira.png"
+    }
+</script>
     </body>
 </html>
