--- a/samanira/index.html
+++ b/samanira/index.html
@@ -59,9 +59,9 @@
                             <div id="about-samanira">
                                 <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
                                 <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy <span itemprop="programmingLanguage">HTML</span> / <span itemprop="programmingLanguage">CSS</span> / <span itemprop="programmingLanguage">JS</span> framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.<br />
-                                Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a>.</p>
+                                Created by <a href="http://www.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a>.</p>
                                 <div class="samanira-socials">
-                                    <a href="https://www.instagram.com/web_samanira/" target="_blank"><img src="../images/samanira/instagram.svg" alt="Samanira Instagram"></a>
+                                    <a href="https://www.instagram.com/samaniraa/" target="_blank"><img src="../images/samanira/instagram.svg" alt="Samanira Instagram"></a>
                                     <a href="https://github.com/samanrashidii/SamanirA" target="_blank"><img src="../images/samanira/github.svg" alt="Samanira Github"></a>
                                 </div><!-- samanira-socials end -->
                                 <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
