--- a/samanira/index.html
+++ b/samanira/index.html
@@ -256,6 +256,7 @@
 <span class="code-item">}</span>
 
 <span class="selector">iframe</span><span class="code-item">{</span>
+    display: block;
     outline:none;
     border:none;
 <span class="code-item">}</span>
@@ -296,6 +297,11 @@
     color: #9a9a9a;
 <span class="code-item">}</span>
 
+<span class="selector">input:-webkit-autofill</span><span class="code-item">,</span>
+<span class="selector">input:-webkit-autofill:hover</span><span class="code-item">,</span>
+<span class="selector">input:-webkit-autofill:focus</span><span class="code-item">,</span>
+<span class="selector">input:-webkit-autofill:active</span><span class="code-item">{background-color: #ffffff;<span class="code-item">}</span>
+
 <span class="selector">fieldset</span><span class="code-item">{</span>
     padding:15px;
     border:1px solid #121212;
@@ -329,6 +335,7 @@
     line-height: 50px;
     font-family: 'Roboto';
     font-size: 16px;
+    color:#121212;
     text-align: center;
     padding:0 15px;
     outline: none;
@@ -1015,6 +1022,7 @@
 
 <span class="selector">.static-position</span><span class="code-item">{</span>position: static;<span class="code-item">}</span>
 <span class="selector">.relative-position</span><span class="code-item">{</span>position: relative;<span class="code-item">}</span>
+<span class="selector">.absolute-position</span><span class="code-item">{</span>position: absolute;<span class="code-item">}</span>
 <span class="selector">.z-index</span><span class="code-item">{</span>
     position: relative;
     z-index: 100;
@@ -1023,6 +1031,8 @@
 <span class="selector">.top-aligned</span><span class="code-item">{</span>vertical-align: top;<span class="code-item">}</span>
 <span class="selector">.vertical-aligned</span><span class="code-item">{</span>vertical-align: middle;<span class="code-item">}</span>
 <span class="selector">.bottom-aligned</span><span class="code-item">{</span>vertical-align: bottom;<span class="code-item">}</span>
+
+<span class="selector">.has-text-shadow</span><span class="code-item">{</span>text-shadow: 0 0 2px #121212;<span class="code-item">}</span>
 
 <span class="selector">.no-boxshadow</span><span class="code-item">{</span>
     -webkit-box-shadow: none !important;
@@ -2866,6 +2876,11 @@
     <span class="code-item">}</span>
 
     <span class="selector">.fixed-attachment</span><span class="code-item">{</span>background-attachment: scroll !important;<span class="code-item">}</span>
+
+    <span class="selector">.has-large-minus-margin</span><span class="code-item">{</span>margin-top: -20px !important;<span class="code-item">}</span>
+    <span class="selector">.has-minus-margin</span><span class="code-item">{</span>margin-top: -10px !important;<span class="code-item">}</span>
+    <span class="selector">.has-medium-minus-margin</span><span class="code-item">{</span>margin-top: -5px !important;<span class="code-item">}</span>
+    <span class="selector">.has-small-minus-margin</span><span class="code-item">{</span>margin-top: 0 !important;<span class="code-item">}</span>
 
     <span class="selector">.font-size-vlarge</span><span class="code-item">{</span>font-size: 25px;<span class="code-item">}</span>
     <span class="selector">.font-size-xxlarge</span><span class="code-item">{</span>font-size: 23px;<span class="code-item">}</span>
