added version and fixed some items in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -49,6 +49,7 @@
                     <h1>
                         <img class="samanira-logo" src="../images/samanira.png" alt="Samanira Logo" />
                         <div itemprop="name" class="schema-item">SamanirA Framework</div>
+                        <span class="current-version">v2.7</span>
                         <span>by <strong itemprop="author">Saman Rashidi</strong> &amp; <strong itemprop="author" class="site-color-2">Samira Salimian</strong></span>
                         <a itemprop="codeRepository" class="bttn site bounce large" href="http://github.com/samanrashidii/samanira" target="_blank">Download Now</a>
                     </h1>
@@ -58,7 +59,7 @@
                         <div class="main-port-content">
                             <div id="about-samanira">
                                 <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
-                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy <span itemprop="programmingLanguage">HTML</span> / <span itemprop="programmingLanguage">CSS</span> / <span itemprop="programmingLanguage">JS</span> framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.<br />
+                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy <span itemprop="programmingLanguage">HTML</span> / <span itemprop="programmingLanguage">CSS</span> / <span itemprop="programmingLanguage">JS</span> framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0 to 100 without waste of time on defining css classes or some javascript functions.<br />
                                 Created by <a href="http://www.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a>.</p>
                                 <div class="samanira-socials">
                                     <a href="https://www.instagram.com/samaniraa/" target="_blank"><img src="../images/samanira/instagram.svg" alt="Samanira Instagram"></a>
