fixed all issues

--- a/magnihelp.html
+++ b/magnihelp.html
@@ -90,7 +90,7 @@
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.magnihelp.com/" target="_blank">Open This Project in Web</a>
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://edoramediarepository.com/samanira/magnihelp/" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
