fixed all SEO issues

--- a/battle-royale.html
+++ b/battle-royale.html
@@ -3,18 +3,18 @@
     <head>
         <title>:: Saman Rashidi ~ Portfolio ~ Battle Royale ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Battle Royale website is one of my projects"/>
+        <meta name="description" content="I'm Saman Rashidi, Senior Front-end Developer and Battle Royale website is one of my projects"/>
         <meta charset="UTF-8" />
+        <meta name="author" content="Saman Rashidi" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Saman Rashidi&#039;s Personal Website ~ Portfolio" />
-        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Battle Royale website is one of my projects" />
-        <meta property="og:url" content="http://www.samanrashidi.com" />
+        <meta property="og:description" content="I'm Saman Rashidi, Senior Front-end Developer and Battle Royale website is one of my projects" />
+        <meta property="og:url" content="http://www.samanrashidi.com/battle-royale.html" />
         <meta property="og:site_name" content="Saman Rashidi" />
-        <meta property="og:image" content="images/samanrashidi.png" />
-        <meta name="author" content="Saman Rashidi" />
-        <link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
+        <meta property="og:image" content="images/portfolio/broyale/desktop.png" />
+        <link rel="alternate" href="http://www.samanrashidi.com/battle-royale.html" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />
 
         <!-- CSS Files
