--- a/page-500.html
+++ b/page-500.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="My Personal Website. I'm a Senior Front-end Developer Working in Edoramedia Company"/>
         <meta charset="UTF-8" />
+        <meta name="author" content="Saman Rashidi" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Saman Rashidi&#039;s Personal Website" />
+        <meta property="og:title" content="Saman Rashidi ~ Internal Server Error (error 500)" />
         <meta property="og:description" content="My Personal Website. I'm a Senior Front-end Developer Working in Edoramedia Company" />
-        <meta property="og:url" content="http://www.samanrashidi.com" />
+        <meta property="og:url" content="http://www.samanrashidi.com/page-500.html" />
         <meta property="og:site_name" content="Saman Rashidi" />
         <meta property="og:image" content="images/samanrashidi.png" />
-        <meta name="author" content="Saman Rashidi" />
-        <link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
+        <link rel="alternate" href="http://www.samanrashidi.com/page-500.html" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />  
 
         <!-- CSS Files
