--- a/samanira/index.html
+++ b/samanira/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>:: Saman Rashidi ~ SamanirA Framework</title>
+        <title>:: Saman Rashidi ~ SamanirA ~ an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0 to 100 ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions."/>
+        <meta name="description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0 to 100 without wasting time on defining css classes or some javascript functions."/>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#0a9abd" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Easy HTML / CSS / JS Framework for Front-end Developers by Saman Rashidi & Samira Salimian" />
-        <meta property="og:description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions." />
+        <meta property="og:description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0 to 100 without wasting time on defining css classes or some javascript functions." />
         <meta property="og:url" content="http://www.samanrashidi.com/samanira" />
         <meta property="og:site_name" content="SamanirA" />
-        <meta property="og:image" content="http://samanrashidi.com/images/samanira.png" />
+        <meta property="og:image" content="images/samanira.png" />
         <meta name="author" content="Saman Rashidi" />
         <link rel="alternate" href="http://www.samanrashidi.com/samanira" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="../favicon.png" />
