--- a/montecristo.html
+++ b/montecristo.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Montecristo website is one of my projects"/>
         <meta charset="UTF-8" />
+        <meta name="author" content="Saman Rashidi" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Saman Rashidi&#039;s Personal Website ~ Portfolio" />
+        <meta property="og:title" content="Saman Rashidi ~ Portfolio ~ Montecristo" />
         <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Montecristo website is one of my projects" />
-        <meta property="og:url" content="http://www.samanrashidi.com" />
+        <meta property="og:url" content="http://www.samanrashidi.com/montecristo.html" />
         <meta property="og:site_name" content="Saman Rashidi" />
-        <meta property="og:image" content="images/samanrashidi.png" />
-        <meta name="author" content="Saman Rashidi" />
-        <link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
+        <meta property="og:image" content="images/portfolio/montecristo/desktop.png" />
+        <link rel="alternate" href="http://www.samanrashidi.com/montecristo.html" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />  
 
         <!-- CSS Files
