--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en-GB">
 	<head>
-		<title>:: Saman Rashidi ~ Web Designer &amp; Front-end Developer ::</title>
+		<title>:: Saman Rashidi ~ Web Designer &amp; Front-end Developer ~ This is My Personal Website, I'm a Senior Front-end Developer Working at Edoramedia Digital Company ::</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="My Personal Website, I'm a Senior Front-end Developer Working in Edoramedia Digital Company"/>
+		<meta name="description" content="My name is Saman Rashidi, I’m from Iran and I specialize in Front-end Web Development. I started working with Edoramedia digital solution company since October 2014 and the owner of SamanirA framework." />
 		<meta charset="UTF-8" />
 		<meta name="author" content="Saman Rashidi" />
 		<meta name="theme-color" content="#0a9abd" />
 		<meta name="samandehi" content="641824005"/>
 		<meta property="og:locale" content="en_GB" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Saman Rashidi&#039;s Personal Website" />
-		<meta property="og:description" content="My Personal Website, I'm a Senior Front-end Developer Working in Edoramedia Digital Company" />
+		<meta property="og:title" content="Saman Rashidi ~ Web Designer &amp; Front-end Developer" />
+		<meta property="og:description" content="My name is Saman Rashidi, I’m from Iran and I specialize in Front-end Web Development. I started working with Edoramedia digital solution company since October 2014 and the owner of SamanirA framework." />
 		<meta property="og:url" content="http://www.samanrashidi.com" />
 		<meta property="og:site_name" content="Saman Rashidi" />
 		<meta property="og:image" content="http://www.samanrashidi.com/samanrashidi.png" />
