fixed some seo issues

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en-GB">
 	<head>
-		<title>:: Saman Rashidi ~ Web Designer &amp; Front-end Developer ~ This is My Personal Website, I'm a Senior Front-end Developer Working at Edoramedia Digital Company ::</title>
+		<title>Saman Rashidi ~ Web Designer and Senior Front-end Developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="My name is Saman Rashidi, I’m from Iran and I specialize in Front-end Web Development. I started working with Edoramedia digital solution company since October 2014 and the owner of SamanirA framework." />
+		<meta name="description" content="My name is Saman and I specialize in Front-end Web Development. I started working with Edoramedia company since October 2014 and the owner of SamanirA framework" />
 		<meta charset="UTF-8" />
 		<meta name="author" content="Saman Rashidi" />
 		<meta name="theme-color" content="#0a9abd" />
@@ -11,7 +11,7 @@
 		<meta property="og:locale" content="en_GB" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Saman Rashidi ~ Web Designer &amp; Front-end Developer" />
-		<meta property="og:description" content="My name is Saman Rashidi, I’m from Iran and I specialize in Front-end Web Development. I started working with Edoramedia digital solution company since October 2014 and the owner of SamanirA framework." />
+		<meta property="og:description" content="My name is Saman and I specialize in Front-end Web Development. I started working with Edoramedia company since October 2014 and the owner of SamanirA framework" />
 		<meta property="og:url" content="http://www.samanrashidi.com" />
 		<meta property="og:site_name" content="Saman Rashidi" />
 		<meta property="og:image" content="http://www.samanrashidi.com/samanrashidi.png" />
@@ -27,16 +27,16 @@
 
 		<!-- Javascript Files
     	================================================== -->
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/masonry.min.js"></script>
-		<script type="text/javascript" src="js/snap.svg-min.js"></script>
-		<script type="text/javascript" src="js/TweenMax.min.js"></script>
-		<script type="text/javascript" src="js/jquery.easing.min.js"></script>
-		<script type="text/javascript" src="js/jquery.validate.min.js"></script>		
-		<script type="text/javascript" src="js/modernizr.custom.js"></script>
-		<script type="text/javascript" src="js/reveal.js"></script>
-		<script type="text/javascript" src="js/animate.js"></script>
-		<script type="text/javascript" src="js/saman.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/masonry.min.js"></script>
+		<script src="js/snap.svg-min.js"></script>
+		<script src="js/TweenMax.min.js"></script>
+		<script src="js/jquery.easing.min.js"></script>
+		<script src="js/jquery.validate.min.js"></script>		
+		<script src="js/modernizr.custom.js"></script>
+		<script src="js/reveal.js"></script>
+		<script src="js/animate.js"></script>
+		<script src="js/saman.js"></script>
 
 		<!--[if lt IE 9]>
 		<link rel="stylesheet" type="text/css" media="screen" href="css/ie.css" />
@@ -165,7 +165,7 @@
 								</div><!-- pagination-navigation end -->
 							</div><!-- pagination end -->
 						</div><!-- reveal end -->
-						<img itemprop="image" class="saman" src="images/saman_rashidi.png" alt="" />
+						<img itemprop="image" class="saman" src="images/saman_rashidi.png" alt="Saman Rashidi" />
 					</div><!-- frame end -->
 				</div><!-- about-me end -->
 
@@ -770,7 +770,7 @@
 
 			<div id="footer" class="has-shape shape-4 center-aligned">
 				<div class="frame">
-					<a href="http://www.samanrashidi.com"><img src="images/logo.png" alt="" /></a>
+					<a href="http://www.samanrashidi.com"><img src="images/logo.png" alt="Saman Rashidi Logo" /></a>
 					<span>Copyright © <span class="current-year"></span> <a itemprop="url" href="http://www.samanrashidi.com">Saman Rashidi</a>. All rights reserved</span>
 				</div><!-- frame end -->
 			</div><!-- approach end -->
@@ -789,7 +789,7 @@
 		"description": "Saman Rashidi is a Senior Front-end Developer Working in Edoramedia Digital Company"
 	}
 </script>
-<script type="text/javascript" src="js/js.js"></script>
+<script src="js/js.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
