added jashnvare banner

--- a/index.html
+++ b/index.html
@@ -800,5 +800,6 @@
   ga('send', 'pageview');
 
 </script>
+<script>!function(e,t,a){"use strict";  var s=t.head||t.getElementsByTagName( "head" )[ 0 ], p=t.createElement( "script" ); e.iwmfBadge=a, p.async=true, p.src= "https://c.iwmf.ir/get-code/people-vote-3-2.js?v=10.5", s.appendChild(p) }(this,document,"b-top-left");</script>
 	</body>
 </html>
