fixed all issues from year 2017

--- a/battle-royale.html
+++ b/battle-royale.html
@@ -26,9 +26,8 @@
 
         <!-- Javascript Files
         ================================================== -->
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/reveal.js"></script>
-        <script type="text/javascript" src="js/animate.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/website.js"></script>
 
         <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" media="screen" href="css/ie.css" />
