--- a/zafaroptic.html
+++ b/zafaroptic.html
@@ -11,10 +11,10 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Saman Rashidi ~ Portfolio ~ Zafar Optic" />
         <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Zafar Optic website is one of my projects" />
-        <meta property="og:url" content="http://www.samanrashidi.com/zafar-optic.html" />
+        <meta property="og:url" content="http://www.samanrashidi.com/zafaroptic.html" />
         <meta property="og:site_name" content="Saman Rashidi" />
         <meta property="og:image" content="images/portfolio/zafar-optic/desktop.png" />
-        <link rel="alternate" href="http://www.samanrashidi.com/zafar-optic.html" hreflang="en-gb" />
+        <link rel="alternate" href="http://www.samanrashidi.com/zafaroptic.html" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />  
 
         <!-- CSS Files
@@ -26,9 +26,8 @@
 
         <!-- Javascript Files
         ================================================== -->
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/reveal.js"></script>
-        <script type="text/javascript" src="js/animate.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/website.js"></script>
 
         <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" media="screen" href="css/ie.css" />
@@ -44,7 +43,7 @@
 
             <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
                 <div class="potfolio-banner" style="background-image:url(images/portfolio/zafar-optic/banner.jpg)">
-                    <h1><div itemprop="name">Zafar Optic</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
+                    <h1><div itemprop="name">Zafar Optic v1.0</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -90,7 +89,7 @@
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.zafaroptic.com/" target="_blank">Open This Project in Web</a>
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.edoramediarepository.com/samanira/zafaroptic" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
