--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
 		<!-- Javascript Files
     	================================================== -->
 		<script src="js/jquery.min.js"></script>
-		<script src="js/masonry.min.js"></script>
-		<script src="js/snap.svg-min.js"></script>
-		<script src="js/TweenMax.min.js"></script>
-		<script src="js/jquery.easing.min.js"></script>
-		<script src="js/jquery.validate.min.js"></script>		
-		<script src="js/modernizr.custom.js"></script>
-		<script src="js/reveal.js"></script>
-		<script src="js/animate.js"></script>
 		<script src="js/saman.js"></script>
+		<script src="js/website.js"></script>
+		<script src="js/js.js"></script>
 
 		<!--[if lt IE 9]>
 		<link rel="stylesheet" type="text/css" media="screen" href="css/ie.css" />
@@ -463,9 +457,9 @@
 								<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
-											<h4>Zafar Optic</h4>
+											<h4>Zafar Optic v1.0</h4>
 											<p>Zafar Optic as one of the core and leading companies in eyewear and optics business in Iran with a main shop and over 60 retail stores. Zafar Optic or Tehran Optic was established by Naser Yavarianfar in 1952</p>
-											<a class="bttn has-icon read-more" href="zafar-optic.html">Read More About This Project</a>
+											<a class="bttn has-icon read-more" href="zafaroptic.html">Read More About This Project</a>
 										</div><!-- portfolio-layer-content end -->
 									</div><!-- portfolio-inner-layer end -->
 								</div><!-- portfolio-layer end -->
@@ -789,7 +783,6 @@
 		"description": "Saman Rashidi is a Senior Front-end Developer Working in Edoramedia Digital Company"
 	}
 </script>
-<script src="js/js.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -800,6 +793,5 @@
   ga('send', 'pageview');
 
 </script>
-<script>!function(e,t,a){"use strict";  var s=t.head||t.getElementsByTagName( "head" )[ 0 ], p=t.createElement( "script" ); e.iwmfBadge=a, p.async=true, p.src= "https://c.iwmf.ir/get-code/people-vote-3-2.js?v=10.5", s.appendChild(p) }(this,document,"b-top-left");</script>
 	</body>
 </html>
