--- a/page-500.html
+++ b/page-500.html
@@ -26,7 +26,7 @@
 
         <!-- Javascript Files
         ================================================== -->
-        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
 
         <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" media="screen" href="css/ie.css" />
